# embedded_cpp

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github /workflows/: blinky-cross.yml
.github/workflows/: blinky-cross.yml  blue_pill_01-cross.yml  blue_pill_01-tests.yml  blue_pill_02.yml
blinky_embarcados/: .clang-format  .gitignore  CMakeLists.txt  README.md
blinky_embarcados/.devcontainer/: Dockerfile  devcontainer.json
blinky_embarcados/cmake/: libopencm3_stm32f103.cmake  toolchain-arm-none-eabi.cmake
blinky_embarcados/src/: main.cpp  startup.c
blue_pill_01/: .clangd  .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md
blue_pill_01/app/: CMakeLists.txt
blue_pill_01/app/include/: CPPLINT.cfg  FreeRTOSConfig.h  main.h  main.hpp  snake.hpp  snake_game.hpp  snake_ui.hpp  test_c.h  test_cpp.h  test_cpp.hpp
blue_pill_01/app/include/devices/gpio/: gpio_opencm3.hpp
blue_pill_01/app/include/devices/lcd/: ssd1306.hpp
blue_pill_01/app/include/peripherals/: clock.hpp  i2c.hpp  timer.hpp  usart.hpp
blue_pill_01/app/include/sys/checks/: test_c.h  test_cpp.hpp
blue_pill_01/app/src/: main.cpp  snake.cpp  snake_game.cpp  snake_ui.cpp  test_c.c  test_cpp.cpp
blue_pill_01/app/src/devices/gpio/: gpio_opencm3.cpp
blue_pill_01/app/src/devices/lcd/: ssd1306.cpp
blue_pill_01/app/src/peripherals/: clock.cpp  gpio_exti.cpp  i2c.cpp  timer.cpp  usart.cpp
blue_pill_01/app/src/sys/: io.c
blue_pill_01/app/src/sys/checks/: test_c.c  test_cpp.cpp
blue_pill_01/cmake/: STM32F103C8TX.ld  bootutil.cmake  embedded-cli.cmake  etlcpp.cmake  freertos_kernel.cmake  gtest.cmake  libopencm3.cmake  libopencm3_stm32f103.cmake  tinycrypt.cmake  toolchain-arm-none-eabi.cmake  toolchain-clang.cmake  u8g2.cmake
blue_pill_01/cmake/patches/: tinycrypt_config.patch
blue_pill_01/include/: FreeRTOSConfig.h  etl_profile.h  main.h  test_c.h  test_cpp.h
blue_pill_01/include/flash_map_backend/: flash_map_backend.h
blue_pill_01/include/mcuboot_config/: mcuboot_config.h  mcuboot_logging.h
blue_pill_01/include/os/: os_malloc.h
blue_pill_01/include/sysflash/: sysflash.h
blue_pill_01/ld/: CMakeLists.txt  Makefile
blue_pill_01/lib/: CMakeLists.txt
blue_pill_01/lib/include/: FreeRTOSConfig.h  etl_profile.h  factory.hpp  led.hpp  mymath.hpp  snake.hpp
blue_pill_01/lib/include/devices/button/: button_gpio.hpp  button_interface.hpp
blue_pill_01/lib/include/devices/gpio/: gpio_opencm3.hpp
blue_pill_01/lib/include/devices/keypad/: keypad_button.hpp  keypad_interface.hpp
blue_pill_01/lib/include/devices/led/: led_gpio.hpp
blue_pill_01/lib/include/gpio/: gpio_interface.hpp
blue_pill_01/lib/include/led/: led_interface.hpp
blue_pill_01/lib/src/: factory.cpp  mymath.cpp  snake.cpp
blue_pill_01/lib/src/devices/button/: button_gpio.cpp
blue_pill_01/lib/src/devices/keypad/: keypad_button.cpp
blue_pill_01/lib/src/devices/led/: led_gpio.cpp
blue_pill_01/lib/src/led/: led_gpio.cpp
blue_pill_01/src/: main.cpp  test_c.c  test_cpp.cpp
blue_pill_01/src/sys/: startup.c  syscalls.c  sysmem.c
blue_pill_01/sys/: CMakeLists.txt  CPPLINT.cfg  startup.c  syscalls.c
blue_pill_01/test/: CMakeLists.txt
blue_pill_01/test/include/: test1.h
blue_pill_01/test/mock/: mock_button.hpp  mock_gpio.hpp
blue_pill_01/test/src/: test1.cpp  test_snake.cpp  ut_button_gpio.cpp  ut_keypad_button.cpp  ut_led_gpio.cpp
blue_pill_02/: .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
blue_pill_02/app/: CMakeLists.txt
blue_pill_02/app/include/: FreeRTOSConfig.h  etl_profile.h  main.hpp
blue_pill_02/app/include/peripherals/: usart.hpp
blue_pill_02/app/src/: main.cpp
blue_pill_02/app/src/peripherals/: usart.cpp
blue_pill_02/app/src/sys/: io.c
blue_pill_02/lib/: CMakeLists.txt
blue_pill_02/test/: CMakeLists.txt
cmake/: STM32F103.svd  embedded-cli.cmake  etlcpp.cmake  gtest.cmake  lib-stm32.cmake  toolchain-arm-none-eabi.cmake
cmake/opencm3/: Makefile
toolchain/: toolchain-arm-none-eabi.cmake
